# qlever-petrimaps

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build-docker.yml  build.yml
cfg/: config.json.sample
src/: CMakeLists.txt
src/qlever-mapui/: CMakeLists.txt  GeomCache.cpp  GeomCache.h  Grid.h  MapUIMain.cpp  Misc.cpp  Misc.h
src/qlever-mapui/server/: .StatServer.h.swo  Requestor.cpp  Requestor.h  Server.cpp  Server.h
src/qlever-petrimaps/: CMakeLists.txt  GeoJSONCache.cpp  GeoJSONCache.h  GeomCache.cpp  GeomCache.h  Grid.h  Grid.tpp  Misc.cpp  Misc.h  PetriMapsMain.cpp  SPARQLCache.cpp  SPARQLCache.h
src/qlever-petrimaps/server/: GeoJSONRequestor.cpp  GeoJSONRequestor.h  Requestor.cpp  Requestor.h  SPARQLRequestor.cpp  SPARQLRequestor.h  Server.cpp  Server.h
src/util/: String.h
src/util/geo/: .BezierCurve.h.swp  .Geo.h.swo  .Grid.c.swp  .Line.h.swp  .PolyLine.h.swp  .Polygon.h.swp  Geo.h  Grid.h  Grid.tpp  Point.h
src/util/geo/output/: .GeoGraphJsonOutput.tpp.swp  GeoJsonOutput.cpp  GeoJsonOutput.h  GeoJsonOutput.tpp
src/util/graph/: .Algorithm.h.swp  .ShortestPath.tpp.swp
src/util/http/: Server.cpp  Server.h
src/util/log/: .Log.h.swp
web/: NonTiledLayer.js  codes.txt  error.html  example.html  index.html  leaflet.css  leaflet.js  merge.js  merged.js  min.js  qleverUI.js  script.js  style.css  themelayer.js
